@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.159 2002/04/17 21:19:56 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.160 2002/04/18 00:56:50 ronpinkas Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2002-04-17 22:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
+  * source/rtl/chrasc.c
+    ! Optimized and fixed bug.
+
+  * source/vm/hvm.c
+    * Minor optimization.
 
 2002-04-17 17:32 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
   * include/hbapi.h
